add PDF, PRB, and emacs temp files to .gitignor

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,15 @@
 *.fls
 *.out
 *.toc
+*.prb
 
 ## Intermediate documents:
 *.dvi
 *-converted-to.*
 # these rules might exclude image files for figures etc.
-# *.ps
-# *.eps
-# *.pdf
+*.ps
+*.eps
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
@@ -124,3 +125,6 @@ sympy-plots-for-*.tex/
 # WinEdt
 *.bak
 *.sav
+
+*~
+#*
